# micro_grid

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/: basic.rs  orders.csv
src/: io.rs  ledger.rs  lib.rs  matcher.rs  simulate.rs
tests/: integration.rs
