[package]
name = "migro_grid"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Maxime Guillemin <guimaxali@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Micro-grid local exchange algorithmic library + CLI (orderbook, matcher, ledger)."
repository = "https://github.com/blastrider/micro_grid"

[lib]
name = "mg_lib"
path = "src/lib.rs"

[[bin]]
name = "mg-cli"
path = "src/bin/mg-cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
thiserror = "1.0"
tracing = "0.1"

# make tracing-subscriber optional (used by the CLI)
tracing-subscriber = { version = "0.3", optional = true }

chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }
rand = { version = "0.8", features = ["std"] }

# CLI-related crates made optional and referenced by feature "cli"
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = []
# feature that enables CLI-related dependencies
cli = ["anyhow", "clap", "tracing-subscriber"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"